Updating CSS and overall layout

--- a/events.html
+++ b/events.html
@@ -3,54 +3,51 @@
 
 <head>
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Chilanka&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Upcoming Events</title>
+    <title>About NYSL</title>
 </head>
 
 <body>
-    <div class="headerWrapper">
-        <div class="header">
-            <img src="images/nysl_logo.png" alt="logo" class="logo">
-            <p class="headerText">
-                Northside Youth Soccer League
-            </p>
+    <div class="sticky">
+        <div class="logo">
             <img src="images/nysl_logo.png" alt="logo" class="logo">
         </div>
+        <div class="nav">
+            <div class="navButton">
+                <a href="index.html">
+                    <p class="navText">SCHEDULE</p>
+                </a>
+            </div>
+            <div class="navButton activeButton">
+                <a href="events.html">
+                    <p class="navText">EVENTS</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="about.html">
+                    <p class="navText">ABOUT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="contact.html">
+                    <p class="navText">CONTACT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="rules.html">
+                    <p class="navText">RULES</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="registration.html">
+                    <p class="navText">REGISTER</p>
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="nav sticky">
-        <div class="navButton">
-            <a href="index.html">
-                <p class="navText">Game Schedule</p>
-            </a>
-        </div>
-        <div class="navButton activeButton">
-            <a href="events.html">
-                <p class="navText">Upcoming Events</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="about.html">
-                <p class="navText">About</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="contact.html">
-                <p class="navText">Contact</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="rules.html">
-                <p class="navText">Rules</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="registration.html">
-                <p class="navText">Registration Form</p>
-            </a>
-        </div>
-    </div>
-
     <div class="bodyBox">
         <div class="sideImages">
             <img src="images/soccer_image1.jpg">
