--- a/show_data.html
+++ b/show_data.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="nav sticky">
-        <div class="navButton activeButton">
+        <div class="navButton">
             <a href="index.html">
                 <p class="navText">Upcoming Events</p>
             </a>
@@ -134,7 +134,5 @@
 
 
 </body>
-
->>>>>>> 48147234cb64e1a63b9c4c116271285b05adf89b
 
 </html>
