--- a/game_info.html
+++ b/game_info.html
@@ -2,54 +2,52 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles/nysl_3.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Game Info</title>
+    <title>About NYSL</title>
 </head>
 
 <body>
-
-<div class="headerWrapper">
-    <div class="header">
-
-
-
-
-        <img src="images/nysl_logo.png" alt="logo" class="logo">
-        <p class="headerText">
-            Northside Youth Soccer League
-        </p>
-        <img src="images/nysl_logo.png" alt="logo" class="logo">
-
-    </div>
-</div>
-
-
-
-
-    
-        <div class="nav sticky">
-            <div class="navButton">
-                <a href="index3.html"><p class="navText">Upcoming Events</p></a>
-            </div>
-            <div class="navButton">
-                <a href="about3.html"><p class="navText">About</p></a>
-            </div>
-            <div class="navButton">
-                <a href="contact3.html"><p class="navText">Contact</p></a>
-            </div>
-            <div class="navButton">
-                <a href="rules3.html"><p class="navText">Rules</p></a>
-            </div>
+    <div class="sticky">
+        <div class="logo">
+            <img src="images/nysl_logo.png" alt="logo" class="logo">
+        </div>
+        <div class="nav">
             <div class="navButton activeButton">
-                <a href="game_info.html"><p class="navText">Game Schedule</p></a>
+                <a href="index.html">
+                    <p class="navText">SCHEDULE</p>
+                </a>
             </div>
             <div class="navButton">
-                <a href="registration.html"><p class="navText">Registration Form</p></a>
+                <a href="events.html">
+                    <p class="navText">EVENTS</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="about.html">
+                    <p class="navText">ABOUT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="contact.html">
+                    <p class="navText">CONTACT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="rules.html">
+                    <p class="navText">RULES</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="registration.html">
+                    <p class="navText">REGISTER</p>
+                </a>
             </div>
         </div>
-    
+    </div>
     <div class="bodyBox">
         <div class="sideImages">
             <img src="images/soccer_image1.jpg">
@@ -234,22 +232,35 @@
                             <p>Michael Randall, League Coordinator</p>
                             <p><strong>Phone:</strong>
                                 (630) 690-8132</p>
-                            <strong>Email:</strong> <a href=mailto:"michael.randall@chisoccer.org">michael.randall@chisoccer.org</a>
+                            <strong>Email:</strong> <a
+                                href=mailto:"michael.randall@chisoccer.org">michael.randall@chisoccer.org</a>
                         </div>
                         <div>
                             <h1>Maps</h1>
                             <h2>AJ Katzenmaier Elementary</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6540604262254!2d-87.63123908431781!3d41.90029637200337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f6bac3%3A0x68a82e5d59952c86!2s24+W+Walton+St%2C+Chicago%2C+IL+60610%2C+USA!5e0!3m2!1sen!2ses!4v1556100492993!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe><br>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6540604262254!2d-87.63123908431781!3d41.90029637200337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f6bac3%3A0x68a82e5d59952c86!2s24+W+Walton+St%2C+Chicago%2C+IL+60610%2C+USA!5e0!3m2!1sen!2ses!4v1556100492993!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe><br>
                             <h2>Greenbay Elementary </h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.0258843688616!2d-87.64002798455778!3d41.91380227921926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34073f306a3%3A0x9e1726bbf8f23f0e!2s1734+N+Orleans+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100606708!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.0258843688616!2d-87.64002798455778!3d41.91380227921926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34073f306a3%3A0x9e1726bbf8f23f0e!2s1734+N+Orleans+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100606708!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
                             <h2>Howard A Yeager Elementary</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.585683085616!2d-87.66511458455746!3d41.92326457921871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2e37f9b8d2d%3A0x62ad8b907dd755d6!2s2245+N+Southport+Ave%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100834957!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.585683085616!2d-87.66511458455746!3d41.92326457921871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2e37f9b8d2d%3A0x62ad8b907dd755d6!2s2245+N+Southport+Ave%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100834957!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
                             <h2>Marjorie P Hart Elementary</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.291728953146!2d-87.64808628431719!3d41.929582270169455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2630e551%3A0x3e719e44a5cef714!2s2625+N+Orchard+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100865221!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.291728953146!2d-87.64808628431719!3d41.929582270169455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2630e551%3A0x3e719e44a5cef714!2s2625+N+Orchard+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100865221!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
                             <h2>North Elementary</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.3376141596673!2d-87.64837698431766!3d41.90710047157734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af0e6ccc3%3A0x26c81c1d557667da!2s1409+N+Ogden+Ave%2C+Chicago%2C+IL+60610%2C+USA!5e0!3m2!1sen!2ses!4v1556100893014!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.3376141596673!2d-87.64837698431766!3d41.90710047157734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af0e6ccc3%3A0x26c81c1d557667da!2s1409+N+Ogden+Ave%2C+Chicago%2C+IL+60610%2C+USA!5e0!3m2!1sen!2ses!4v1556100893014!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
                             <h2>South Elementary</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.7477648266286!2d-87.65355538431739!3d41.91978077078336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3196fb41dc7%3A0x970be7f7d6336df5!2s2101+N+Fremont+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100913142!5m2!1sen!2ses" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.7477648266286!2d-87.65355538431739!3d41.91978077078336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3196fb41dc7%3A0x970be7f7d6336df5!2s2101+N+Fremont+St%2C+Chicago%2C+IL+60614%2C+USA!5e0!3m2!1sen!2ses!4v1556100913142!5m2!1sen!2ses"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </center>
                 </div>
