--- a/registration.html
+++ b/registration.html
@@ -4,50 +4,47 @@
 <head>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>About NYSL</title>
 </head>
 
 <body>
-    <div class="headerWrapper">
-        <div class="header">
-            <img src="images/nysl_logo.png" alt="logo" class="logo">
-            <p class="headerText">
-                Northside Youth Soccer League
-            </p>
+    <div class="sticky">
+        <div class="logo">
             <img src="images/nysl_logo.png" alt="logo" class="logo">
         </div>
-    </div>
-    <div class="nav sticky">
-        <div class="navButton">
-            <a href="index.html">
-                <p class="navText">Game Schedule</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="events.html">
-                <p class="navText">Upcoming Events</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="about.html">
-                <p class="navText">About</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="contact.html">
-                <p class="navText">Contact</p>
-            </a>
-        </div>
-        <div class="navButton">
-            <a href="rules.html">
-                <p class="navText">Rules</p>
-            </a>
-        </div>
-        <div class="navButton activeButton">
-            <a href="registration.html">
-                <p class="navText">Registration Form</p>
-            </a>
+        <div class="nav">
+            <div class="navButton">
+                <a href="index.html">
+                    <p class="navText">SCHEDULE</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="events.html">
+                    <p class="navText">EVENTS</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="about.html">
+                    <p class="navText">ABOUT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="contact.html">
+                    <p class="navText">CONTACT</p>
+                </a>
+            </div>
+            <div class="navButton">
+                <a href="rules.html">
+                    <p class="navText">RULES</p>
+                </a>
+            </div>
+            <div class="navButton activeButton">
+                <a href="registration.html">
+                    <p class="navText">REGISTER</p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="bodyBox">
@@ -249,7 +246,5 @@
     <div class="footer">
     </div>
 </body>
-
->>>>>>> 48147234cb64e1a63b9c4c116271285b05adf89b
 
 </html>
